--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "adminlte-2-react": "^0.2.0",
     "antd": "^5.9.1",
     "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
