--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "sass": "^1.67.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
