--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
-    "sass": "^1.67.0"
+    "sass": "^1.67.0",
+    "zustand": "^4.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
